--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -50,8 +50,8 @@ setuptools==80.9.0
 six==1.17.0
 starlette==0.50.0
 sympy==1.14.0
-torch==2.9.1
-torchvision==0.24.1
+torch==2.10.0+cu130
+torchvision==0.25.0+cu130
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 ultralytics==8.4.4
